Add license to composer.json
A "BSD-3-Clause" license has been added to the composer.json file. This addition further clarifies the licensing agreement for anyone using or contributing to this project.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "nubox/laminas-router-annotations",
   "description": "Use Symfony Route Annotations for Laminas Controller",
+  "license": "BSD-3-Clause",
   "authors": [
     {
       "name": "Sebastian Hopfe",
