--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   ],
   "require": {
     "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+    "symfony/config": "*",
     "symfony/routing": "*",
     "laminas/laminas-router": "*"
   },
