--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ composer.phar
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
 # composer.lock
 /composer.lock
+
+# Maintenance
+phpcs.xml
+phpunit.xml
+psalm.xml
