--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,16 @@
   ],
   "require": {
     "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
-    "symfony/config": "*",
-    "symfony/routing": "*",
-    "symfony/http-foundation": "*",
-    "laminas/laminas-router": "*"
+    "symfony/config": "^6.4 || ^7.0",
+    "symfony/routing": "^6.4 || ^7.0",
+    "symfony/http-foundation": "^6.4 || ^7.0",
+    "laminas/laminas-router": "^3.0"
   },
   "require-dev": {
     "laminas/laminas-coding-standard": "~2.5.0",
-    "laminas/laminas-test": "*",
-    "symfony/expression-language": "*"
+    "laminas/laminas-test": "^4.0",
+    "symfony/expression-language": "^6.4 || ^7.0",
+    "vimeo/psalm": "^5.18"
   },
   "suggest": {
     "symfony/expression-language": "to use symfony conditonal routes"
@@ -46,6 +47,7 @@
     "cs-check": "phpcs",
     "cs-fix": "phpcbf",
     "static-analysis": "psalm --shepherd --stats",
+    "static-analysis-all": "psalm --show-info=true",
     "test": "phpunit --colors=always"
   }
 }
